@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-04T02:14:12Z",
+  "timestamp" : "2022-11-04T16:32:35Z",
   "count_outdated" : 863,
   "uniques_outdated" : 453,
-  "count" : 891,
+  "count" : 890,
   "uniques" : 468,
   "clones" : [
     {
       "timestamp": "2022-10-21T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
